Manage issue for constexpr virtual dtor support in GCC

Cf https://gcc.gnu.org/bugzilla/show_bug.cgi?id=93413